--- a/sass/partials/_typography.scss
+++ b/sass/partials/_typography.scss
@@ -1,15 +1,14 @@
-/*h1 {
+h1 {
     font-family: $font-logo;
     color: getColour(pink);
 }
 
 p {
     font-family: $font-text;
-    color: getColour(darkgrey);
+    color: getColour(white);
 }
 
 
 a {
     font-family: $font-text;
 }
-*/ 
