--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,34 @@ body {
           flex: 1 0 auto;
 }
 
+.product-container {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+  -ms-grid-rows: 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
+  margin: 10px auto;
+  max-width: 1000px;
+}
+
+.product-details {
+  text-align: center;
+  padding: 20px;
+  background-color: #FFFFFF;
+  border-radius: 10px;
+  margin: 10px auto;
+  max-width: 1000px;
+}
+
+.product {
+  text-align: center;
+  margin: 10px;
+  padding: 10px 5px;
+  background-color: #FFFFFF;
+  border-radius: 10px;
+}
+
 .navbar {
   background-color: #212529 !important;
 }
@@ -47,55 +75,41 @@ body {
   text-decoration: underline;
 }
 
-/*h1 {
-    font-family: $font-logo;
-    color: getColour(pink);
+h1 h2 {
+  font-family: "Playfair Display", serif;
 }
 
 p {
-    font-family: $font-text;
-    color: getColour(darkgrey);
+  font-family: "Lato", sans-serif;
+  font-size: 1em;
 }
-
 
 a {
-    font-family: $font-text;
-}
-*/
-/*footer {
-    display: flex;
-    flex-shrink: 0;
-    justify-content: space-between;
-    background-color: getColour(white);
-    margin-top: 2rem;
-    font-size: 0.8em;
-    padding: 0.5em;
-
-   
-    
-    
-    i {
-    color: getColour(darkgrey);
-    font-size: 40px;
+  font-family: "Lato", sans-serif;
 }
 
-
-a {
-    color: white;
-    text-decoration: none;
-
-    a:hover {
-        color: getColour(primary);
-    }
+footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  background-color: #FFFFFF;
+  margin-top: 2rem;
+  font-size: 0.8em;
+  padding: 0.5em;
 }
-a {
-    color: white;
-    text-decoration: none;
 
-    a:hover {
-        color: getColour(pink);
-    }
+footer i {
+  color: #212529;
+  font-size: 40px;
 }
+
+footer a {
+  color: white;
+  text-decoration: none;
 }
-*/
 /*# sourceMappingURL=style.css.map */
