--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -1,4 +1,4 @@
-/*footer {
+footer {
     display: flex;
     flex-shrink: 0;
     justify-content: space-between;
@@ -15,24 +15,14 @@
     font-size: 40px;
 }
 
-
 a {
     color: white;
     text-decoration: none;
+}
 
     a:hover {
         color: getColour(primary);
     }
 }
-a {
-    color: white;
-    text-decoration: none;
 
-    a:hover {
-        color: getColour(pink);
-    }
-}
-}
-*/ 
  
-
