--- a/sass/partials/_base.scss
+++ b/sass/partials/_base.scss
@@ -21,6 +21,13 @@ body {
     flex: 1 0 auto;
 }
 
+.container {
+    align-items: center;
+    max-width: 1000px;
+    margin: 0px auto;
+    text-align: center;
+}
+
 //Productpage
 
 .product-container {
