--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,15 @@ body {
           flex: 1 0 auto;
 }
 
+.container {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  max-width: 1000px;
+  margin: 0px auto;
+  text-align: center;
+}
+
 .product-container {
   display: -ms-grid;
   display: grid;
@@ -77,6 +86,10 @@ body {
 
 h1 h2 {
   font-family: "Playfair Display", serif;
+}
+
+h4 {
+  color: #FFFFFF;
 }
 
 p {
