--- a/css/style.css
+++ b/css/style.css
@@ -125,4 +125,45 @@ footer a {
   color: white;
   text-decoration: none;
 }
+
+.container {
+  max-width: 760px;
+  margin: 0 auto;
+}
+
+form {
+  padding: 2em;
+  background: white;
+  border-radius: 1rem;
+}
+
+input {
+  width: 100%;
+  margin-top: 2px;
+  padding: 10px;
+  font-size: 16px;
+}
+
+button {
+  background: #0b5b85;
+  border: none;
+  width: 200px;
+  padding: 1rem;
+  color: white;
+  margin-top: 10px;
+  cursor: pointer;
+  border-radius: 0.2rem;
+}
+
+label {
+  display: block;
+  margin-top: 1rem;
+}
+
+.form-error {
+  display: none;
+  color: red;
+  font-size: 0.9rem;
+  margin-top: 2px;
+}
 /*# sourceMappingURL=style.css.map */
