--- a/css/style.css
+++ b/css/style.css
@@ -101,6 +101,10 @@ a {
   font-family: "Lato", sans-serif;
 }
 
+span {
+  color: white;
+}
+
 footer {
   display: -webkit-box;
   display: -ms-flexbox;
