--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -1,4 +1,4 @@
-footer {
+/*footer {
     display: flex;
     flex-shrink: 0;
     justify-content: space-between;
@@ -23,6 +23,6 @@ a {
     a:hover {
         color: getColour(primary);
     }
-}
+} */
 
  
