--- a/css/style.css
+++ b/css/style.css
@@ -63,29 +63,9 @@ body {
   border-radius: 10px;
 }
 
-.navbar {
-  background-color: #212529 !important;
-}
-
-.navbar-brand {
-  color: #FEFCAA !important;
-}
-
-.nav-link {
-  color: #FEFCAA !important;
-}
-
-.active {
-  color: #FFFFFF !important;
-}
-
-.nav-link :hover {
-  color: #FFFFFF;
-  text-decoration: underline;
-}
-
-h1 h2 {
+h1 {
   font-family: "Playfair Display", serif;
+  color: #FFFFFF;
 }
 
 h4 {
@@ -99,37 +79,39 @@ p {
 
 a {
   font-family: "Lato", sans-serif;
+  text-decoration: none;
 }
 
 span {
   color: white;
 }
 
-footer {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-negative: 0;
-      flex-shrink: 0;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  background-color: #FFFFFF;
-  margin-top: 2rem;
-  font-size: 0.8em;
-  padding: 0.5em;
+/*footer {
+    display: flex;
+    flex-shrink: 0;
+    justify-content: space-between;
+    background-color: getColour(white);
+    margin-top: 2rem;
+    font-size: 0.8em;
+    padding: 0.5em;
+
+   
+    
+    
+    i {
+    color: getColour(darkgrey);
+    font-size: 40px;
 }
 
-footer i {
-  color: #212529;
-  font-size: 40px;
+a {
+    color: white;
+    text-decoration: none;
 }
 
-footer a {
-  color: white;
-  text-decoration: none;
-}
-
+    a:hover {
+        color: getColour(primary);
+    }
+} */
 .container {
   max-width: 760px;
   margin: 0 auto;
