--- a/sass/partials/_base.scss
+++ b/sass/partials/_base.scss
@@ -32,7 +32,7 @@ body {
 
 .product-container {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     margin: 10px auto;
     max-width: 1000px;
@@ -48,6 +48,7 @@ body {
 }
 
 .product {
+    display: grid;
     text-align: center;
     margin: 10px;
     padding: 10px 5px;
@@ -55,3 +56,27 @@ body {
     border-radius: 10px;
 }
 
+.cart-product {
+    text-align: center;
+    margin: 10px;
+    padding: 20px;
+    background-color: getColour(white);
+    border-radius: 10px;
+}
+
+.cta-button {
+    color: getColour(white);
+    font-size: 1em;
+    background-color: getColour(darkgrey);
+    padding: 10px;
+    margin: 5px;
+}
+
+@media (max-width: 850px) {
+    
+    .product-container {
+        grid-template-columns: 1fr 1fr;
+
+    }
+
+}
