--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -1,28 +1,30 @@
-/*footer {
-    display: flex;
-    flex-shrink: 0;
-    justify-content: space-between;
-    background-color: getColour(white);
-    margin-top: 2rem;
-    font-size: 0.8em;
-    padding: 0.5em;
+// footer sammen slik at vi bruker sass
 
-   
-    
-    
-    i {
-    color: getColour(darkgrey);
-    font-size: 40px;
+footer {
+   background-color: getColour(blue);
+   margin-top: 20px;
+   text-align: center;
+   display: grid;
+   grid-template-columns: 1fr 1fr 1fr;
+   grid-template-rows: 1fr;
 }
 
-a {
-    color: white;
-    text-decoration: none;
+footer p , h3 {
+    color: getColour(white);
 }
 
-    a:hover {
-        color: getColour(primary);
+.subscribe input {
+    margin: 5px;
+    width: 100%;
+    padding: 10px;
+    font-size: 1em;
+}
+
+@media (max-width: 850px) {
+    
+    footer {
+        grid-template-columns: 1fr;
+
     }
-} */
 
- 
+}
