--- a/sass/partials/_nav.scss
+++ b/sass/partials/_nav.scss
@@ -16,6 +16,15 @@
     padding: 20px;
 }
 
+.menu .active {
+    background-color: getColour(darkgrey);
+    color: getColour(blue) !important;
+}
+
+.active {
+    background-color: getColour(darkgrey);
+    color: getColour(blue) !important;
+}
 
 
 
