--- a/css/style.css
+++ b/css/style.css
@@ -59,10 +59,11 @@ body {
   display: -ms-grid;
   display: grid;
   text-align: center;
-  margin: 10px;
-  padding: 10px 5px;
+  margin: 5px;
+  padding: 10px;
   background-color: #FFFFFF;
-  border-radius: 10px;
+  border-radius: 2px;
+  border: 2px solid black;
 }
 
 .cart-product {
