--- a/sass/partials/_base.scss
+++ b/sass/partials/_base.scss
@@ -50,10 +50,11 @@ body {
 .product {
     display: grid;
     text-align: center;
-    margin: 10px;
-    padding: 10px 5px;
+    margin: 5px;
+    padding: 10px;
     background-color: getColour(white);
-    border-radius: 10px;
+    border-radius: 2px;
+    border: 2px solid black;
 }
 
 .cart-product {
