--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ html, body {
 }
 
 body {
-  background-color: #212529;
+  background-color: #dfe8f0;
   margin: 0;
   font-family: "Lato", sans-serif;
   display: -webkit-box;
@@ -49,8 +49,9 @@ body {
 .product-details {
   text-align: center;
   padding: 20px;
+  border: 1px solid #2742DB;
   background-color: #FFFFFF;
-  border-radius: 10px;
+  border-radius: 2px;
   margin: 10px auto;
   max-width: 1000px;
 }
@@ -59,11 +60,12 @@ body {
   display: -ms-grid;
   display: grid;
   text-align: center;
-  margin: 5px;
-  padding: 10px;
   background-color: #FFFFFF;
   border-radius: 2px;
-  border: 2px solid black;
+  margin: 10px;
+  border: 1px solid #2742DB;
+  -webkit-box-shadow: 2px 4px 2px -2px #2742DB;
+          box-shadow: 2px 4px 2px -2px #2742DB;
 }
 
 .cart-product {
@@ -75,11 +77,26 @@ body {
 }
 
 .cta-button {
-  color: #FFFFFF;
+  font-family: "Playfair Display", serif;
+  color: #2742DB;
   font-size: 1em;
-  background-color: #212529;
   padding: 10px;
-  margin: 5px;
+}
+
+.cta-button:hover {
+  font-size: 1.1em;
+  text-decoration: underline;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+/*border-radius: 2px;
+    background-color: getColour(blue);
+    padding: 10px;
+    margin: 5px;*/
+img {
+  margin: 0px auto;
+  max-width: 100%;
 }
 
 @media (max-width: 850px) {
@@ -105,24 +122,32 @@ body {
   padding: 20px;
 }
 
-.menu .active {
-  background-color: #212529;
-  color: #2742DB !important;
+.menu a:hover {
+  background-color: #dfe8f0;
+  color: #FFFFFF !important;
 }
 
-.active {
-  background-color: #212529;
-  color: #2742DB !important;
+menu a.active {
+  background-color: #dfe8f0;
+  color: #FFFFFF !important;
 }
 
 #logout {
-  background: #212529;
+  background: #dfe8f0;
   border-radius: 5px;
   border: none;
   width: 200px;
   padding: 1rem;
   color: white;
-  cursor: pointer;
+}
+
+.featured-products {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
+  -ms-grid-rows: 1fr;
+      grid-template-rows: 1fr;
 }
 
 h1 {
@@ -132,7 +157,7 @@ h1 {
 
 h2 {
   font-family: "Playfair Display", serif;
-  color: #212529;
+  color: #dfe8f0;
 }
 
 h3 {
@@ -185,41 +210,65 @@ footer p, h3 {
 }
 
 .container {
-  max-width: 760px;
+  max-width: 1000px;
   margin: 0 auto;
 }
 
 form {
+  width: 500px;
   padding: 20px;
-  background: white;
-  border-radius: 10px;
 }
 
 input {
+  border: 2px solid #2742DB;
+  border-radius: 2px;
   width: 100%;
-  margin-top: 2px;
   padding: 10px;
   font-size: 1em;
 }
 
 button {
-  background: #212529;
+  background: #2742DB;
   border-radius: 5px;
   margin: 5px;
   border: none;
   width: 200px;
   padding: 1rem;
   color: white;
-  cursor: pointer;
 }
 
 .message {
-  background-color: #ff7801;
-  padding: 20px;
-  color: #FFFFFF;
+  margin: 5px auto;
+}
+
+.message.error {
+  background: #ff7801;
+  border-radius: 2px;
+  margin: 5px;
+  width: 200px;
+  padding: 10px;
+  color: white;
+}
+
+.message.warning {
+  background: #ff7801;
+  border-radius: 2px;
+  width: 200px;
+  padding: 10px;
+  color: white;
+}
+
+.message.success {
+  background: green;
+  border-radius: 2px;
+  width: 200px;
+  padding: 10px;
+  color: white;
 }
 
 label {
+  font-family: "Lato", sans-serif;
+  padding: 5px;
   display: block;
   margin-top: 1rem;
 }
@@ -229,5 +278,10 @@ label {
   color: red;
   font-size: 0.9rem;
   margin-top: 2px;
+}
+
+textarea {
+  border: 1px solid #2742DB;
+  width: 100%;
 }
 /*# sourceMappingURL=style.css.map */
