--- a/sass/partials/_nav.scss
+++ b/sass/partials/_nav.scss
@@ -16,14 +16,14 @@
     padding: 20px;
 }
 
-.menu .active {
+.menu a:hover {
     background-color: getColour(darkgrey);
-    color: getColour(blue) !important;
+    color: getColour(white) !important;
 }
 
-.active {
+menu a.active {
     background-color: getColour(darkgrey);
-    color: getColour(blue) !important;
+    color: getColour(white) !important;
 }
 
 
@@ -36,7 +36,6 @@
     width: 200px;
     padding: 1rem;
     color: white;
-    cursor: pointer;
 }
 
 
