--- a/sass/partials/_variables.scss
+++ b/sass/partials/_variables.scss
@@ -6,7 +6,7 @@ $font-text: 'Lato', sans-serif;
 
 
 $colours: (
-    darkgrey: #212529,
+    darkgrey: #dfe8f0,
     white: #FFFFFF,
     blue: #2742DB,
     lightblue: #B4D6FD,
