--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -13,12 +13,11 @@ footer p , h3 {
     color: getColour(white);
 }
 
-.subscribe input {
-    margin: 5px;
-    width: 100%;
-    padding: 10px;
-    font-size: 1em;
+.entrance {
+    text-align: center;
 }
+
+
 
 @media (max-width: 850px) {
     
