--- a/sass/partials/_typography.scss
+++ b/sass/partials/_typography.scss
@@ -2,12 +2,12 @@
 
 h1  {
     font-family: $font-logo;
-    color: getColour(white);
+    color: getColour(blue);
 }
 
 h2 {
     font-family: $font-logo;
-    color: getColour(darkgrey);
+    color: getColour(black);
 }
 
 h3 {
