--- a/sass/partials/_forms.scss
+++ b/sass/partials/_forms.scss
@@ -19,6 +19,7 @@ input {
 
 
 button {
+    cursor: pointer;
     background: getColour(blue);
     border-radius: 5px;
     margin: 5px;
@@ -76,6 +77,7 @@ textarea {
     border: 1px solid getColour(blue) ;
     width: 100%;
 }
+
 
 
 
