--- a/sass/partials/_variables.scss
+++ b/sass/partials/_variables.scss
@@ -1,6 +1,8 @@
 
-$font-logo: 'Playfair Display', serif;
-$font-text: 'Lato', sans-serif;
+$font-a:'Kanit', sans-serif;
+$font-text: 'DM Sans', sans-serif;
+$font-heading:'Be Vietnam Pro', sans-serif; 
+
 
 
 
