--- a/sass/partials/_nav.scss
+++ b/sass/partials/_nav.scss
@@ -12,7 +12,7 @@
 
 .menu a {
     cursor: pointer;
-    font-family: $font-logo;
+    font-family: $font-a;
     color: getColour(white);
     padding: 20px;
 }
