--- a/sass/partials/_base.scss
+++ b/sass/partials/_base.scss
@@ -66,7 +66,7 @@ body {
 
 .cta-button { 
     background-color: getColour(blue);
-    font-family: $font-logo;
+    font-family: $font-a;
     color: getColour(white);
     font-size: 1em;
     padding: 1em 4em;
