--- a/sass/partials/_variables.scss
+++ b/sass/partials/_variables.scss
@@ -1,7 +1,7 @@
 
-$font-a:'Kanit', sans-serif;
-$font-text: 'DM Sans', sans-serif;
-$font-heading:'Be Vietnam Pro', sans-serif; 
+$font-a:"Kanit", sans-serif;
+$font-text: "DM Sans", sans-serif;
+$font-heading:"Be Vietnam Pro", sans-serif; 
 
 
 
