--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ html, body {
 }
 
 body {
-  background-color: #dfe8f0;
+  background-image: #dfe8f0;
   margin: 0;
   display: -ms-grid;
   display: grid;
