--- a/sass/partials/_base.scss
+++ b/sass/partials/_base.scss
@@ -8,7 +8,7 @@ html, body {
 
 
 body {
-    background-image: getColour(darkgrey);
+    background-image: url(../../img/SP2-background.jpg);
     margin: 0 ;
     display: grid;
     grid-template-rows: auto 1fr auto;
