--- a/sass/partials/_base.scss
+++ b/sass/partials/_base.scss
@@ -8,18 +8,20 @@ html, body {
 
 
 body {
-    background-image: url(../../img/SP2-background.jpg);
     margin: 0 ;
     display: grid;
     grid-template-rows: auto 1fr auto;
-   
+}
+
+.mainy {
+    background-image: url(../../img/SP2-background.jpg);
 }
 
 
 
-/*.wrapper {
+.wrapper {
     flex: 1 0 auto;
-}*/
+}
 
 .container {
     align-items: center;
@@ -57,8 +59,6 @@ body {
 }
 
 .cart-product {
-    text-align: center;
-    margin: 10px;
     padding: 20px;
     background-color: getColour(white);
     border-radius: 10px;
