--- a/sass/partials/_variables.scss
+++ b/sass/partials/_variables.scss
@@ -11,6 +11,7 @@ $colours: (
     darkgrey: #dfe8f0,
     white: #FFFFFF,
     blue: #2742DB,
+    hover: #046BF1,
     lightblue: #B4D6FD,
     orange: #ff7801,
 );
