--- a/sass/partials/_nav.scss
+++ b/sass/partials/_nav.scss
@@ -18,8 +18,10 @@
 }
 
 .menu a:hover {
-    background-color: getColour(darkgrey);
     color: getColour(white) !important;
+    font-weight: bold;
+    transition: 0.5s;
+    font-size: 1.2em;
 }
 
 menu a.active {
@@ -34,33 +36,29 @@ i {
 }
 
 i:hover {
-    color: aqua;
+    color: getColour(hover);
 }
-
-
-
 
 #logout {
     margin: 0px auto;
-    background: getColour(blue);
+    background-color: getColour(blue);
     border-radius: 5px;
-    border: none;
+    border: 2px solid white;
     width: 200px;
     padding: 1rem;
     color: white;
 }
 
+#logout:hover {
+    font-size: 1.2em;
+    transition: 0.5s;
+    background-color: getColour(hover);
+    
+}
+
 @media (max-width: 670px) { 
    .menu {
        display: grid;
-   }
-
-   .menu a {
-       color: blue;
-   }
-
-   .menu-container {
-       background-color: getColour(darkgrey);
    }
    
 }
