--- a/css/style.css
+++ b/css/style.css
@@ -16,9 +16,6 @@ body {
       grid-template-rows: auto 1fr auto;
 }
 
-/*.mainy {
-    background-image: url(../../img/SP2-background.jpg);
-}*/
 .wrapper {
   -webkit-box-flex: 1;
       -ms-flex: 1 0 auto;
@@ -32,6 +29,24 @@ body {
   max-width: 1000px;
   margin: 0px auto;
   text-align: center;
+}
+
+.featured-products {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: 1fr;
+      grid-template-rows: 1fr;
+}
+
+.featured {
+  text-align: center;
+  background-color: #FFFFFF;
+  margin: 10px;
+  padding: 20px;
+}
+
+.featured img {
+  max-height: 300px;
 }
 
 .product-container {
@@ -203,9 +218,16 @@ img {
   }
   img {
     max-width: 300px;
+    max-height: 300px;
   }
   .details-text {
     max-width: 400px;
+  }
+  .featured-products {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
   }
 }
 
