--- a/sass/partials/_forms.scss
+++ b/sass/partials/_forms.scss
@@ -1,7 +1,4 @@
-.container {
-    max-width: 1000px;
-    margin: auto;
-}
+
 
 form {
     border-radius: 10px;
@@ -13,50 +10,43 @@ form {
 }
 
 
-//input og textarea sammen
-input {
+//input & textarea 
+input,textarea {
     border: 2px solid getColour(blue);
     background-color: getColour(darkgrey);
     border-radius: 2px;
     width: 100%;
     padding: 1em;
-    font-size: 1em;
-}
-
-textarea {
-    background-color: getColour(darkgrey);
-    border: 2px solid getColour(blue) ;
-    width: 100%;
+    font-size: 1em; 
     margin-bottom: 10px;
 }
+
 
 
 button {
     cursor: pointer;
     font-size: 1em;
-    background: getColour(blue);
-    border-radius: 5px;
+    background-color: getColour(blue);
     margin-bottom: 10px;
     margin-top: 10px;
     border: none;
-    width: 100%;
+    width: 200px;
     padding: 1em;
     color: white;
+
+    &:hover {
+    font-size: 1.2em;
+    background-color: getColour(hover);
+    transition: 0.5s;
+    }
 }
 
 .message {
     margin: 5px auto;
 }
 
-.message.error {
-    background: getColour(orange);
-    border-radius: 2px;
-    width: 100%;
-    padding: 1em;
-    color: white;
-}
-
-.message.warning {
+.message.error, .message.warning {
+    font-family: $font-text;
     background: getColour(orange);
     border-radius: 2px;
     width: 100%;
@@ -65,6 +55,7 @@ button {
 }
 
 .message.success {
+    font-family: $font-text;
     background: green;
     border-radius: 2px;
     width: 100%;
@@ -82,6 +73,7 @@ label {
 }
 
 .form-error {
+    font-family: $font-text;
     display: none;
     color: red;
     font-size: 0.9rem;
