--- a/sass/partials/_nav.scss
+++ b/sass/partials/_nav.scss
@@ -1,5 +1,3 @@
-// menu sammen slik at vi bruker sass
-
 .menu {
    padding: 20px;
 }
@@ -15,29 +13,25 @@
     font-family: $font-a;
     color: getColour(white);
     padding: 20px;
-}
-
-.menu a:hover {
-    color: getColour(white) !important;
+    
+    &:hover {
     font-weight: bold;
     transition: 0.5s;
     font-size: 1.2em;
 }
-
-menu a.active {
-    background-color: getColour(darkgrey);
-    color: getColour(white) !important;
 }
+
 
 i {
     padding: 10px;
     font-size: 30px;
     color: white;
-}
-
-i:hover {
+    
+    &:hover {
     color: getColour(hover);
 }
+}
+
 
 #logout {
     margin: 0px auto;
@@ -47,14 +41,15 @@ i:hover {
     width: 200px;
     padding: 1rem;
     color: white;
+
+    &:hover {
+        font-size: 1.2em;
+        transition: 0.5s;
+        background-color: getColour(hover);   
+    }
 }
 
-#logout:hover {
-    font-size: 1.2em;
-    transition: 0.5s;
-    background-color: getColour(hover);
-    
-}
+
 
 @media (max-width: 670px) { 
    .menu {
