--- a/css/style.css
+++ b/css/style.css
@@ -33,9 +33,33 @@ body {
 
 .featured, .product, .cart-product {
   text-align: center;
+  -webkit-filter: drop-shadow(1px 3px 3px);
+          filter: drop-shadow(1px 3px 3px);
   background-color: #FFFFFF;
   margin: 10px;
   padding: 20px;
+}
+
+.hero-banner {
+  position: relative;
+  text-align: center;
+}
+
+.banner-heading {
+  -webkit-filter: drop-shadow(3px 1px 1px black);
+          filter: drop-shadow(3px 1px 1px black);
+  position: absolute;
+  font-size: 5em;
+  top: 20%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.hero-banner img {
+  max-height: 90vh;
+  width: 100%;
+  margin: 0px;
 }
 
 .featured-products {
@@ -43,6 +67,8 @@ body {
   display: grid;
   -ms-grid-rows: 1fr;
       grid-template-rows: 1fr;
+  -ms-grid-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
 }
 
 .featured img {
@@ -196,6 +222,11 @@ img {
     padding: 10px;
     margin: 10px;
   }
+  .hero-banner img {
+    max-height: 90vh;
+    max-width: 100%;
+    margin: 0px;
+  }
   img {
     max-width: 300px;
     max-height: 300px;
@@ -208,6 +239,11 @@ img {
     display: grid;
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
+    -ms-grid-rows: 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
+  }
+  .banner-heading {
+    font-size: 4em;
   }
 }
 
